# uw_chess

./: .env  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  UW_ChessV1.py  WhisperSTT.py  devs.ipynb  fastspeech2.py  pyproject.toml  requirements.txt  uw-v1.py
models/: devs.ipynb  falcon.ipynb  whisper.ipynb
notebooks/: uw-v1.ipynb
react-translator/: package-lock.json  package.json
react-translator/src/: App.jsx  worker.js
react-translator/src/components/: LanguageSelector.jsx
src/uw_chess/: STT.py  TTS.py  UCI_formatting.py  UW_ChessV1.py  buffer.py  cli_parser.py  loading.py  main.py  print_document.py  realtime_stt.py  render_board.py  runtime_test.py  uw_chess_v1.py
src/uw_chess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uw_chess/game_assets/: cheesbord.psd
src/uw_chess/tests/: execution_time_log.txt
uw-chess/: STT.py  TTS.py  UCI_formatting.py  UW_ChessV1.py  WhisperSTT.py  distil_whisper.py  fastspeech2.py  loading.py  main.py  render_board.py  runtime_test.py
